fixed bug with z-index of jsdomenu
git-svn-id: file:///root/orig/nagvis/trunk@532 ff461055-cf1a-0410-99e4-fa365203d4c3

--- a/wui/includes/css/office_xp/office_xp.css
+++ b/wui/includes/css/office_xp/office_xp.css
@@ -11,7 +11,7 @@ Menu related selectors
 	padding-top: 2px;
 	position: absolute; /* Do not alter this line! */
 	visibility: hidden;
-	z-index: 10;
+	z-index: 999;
 }
 
 .jsdomenuitem {
